# lingshu-round2

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  Makefile  QUICKSTART.md  docker-compose.infra.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  Dockerfile  mypy.ini  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 000_baseline.py  001_setting_tables.py  002_ontology_tables.py  003_data_tables.py  004_function_tables.py  005_copilot_tables.py  005b_add_entity_data_to_snapshots.py  006_langgraph_checkpoint.py  007_datetime_timezone.py
backend/scripts/: neo4j_init.py
backend/src/lingshu/: __init__.py  config.py  main.py
backend/tests/: conftest.py
backend/tests/integration/: test_asset_mapping_integration.py  test_auth_flow.py  test_cascade_integration.py  test_contract_integration.py  test_copilot_router_full.py  test_copilot_session.py  test_data_pipeline.py  test_data_router_full.py  test_function_execution.py  test_function_router_full.py  test_immutable_integration.py  test_ontology_router_full.py  test_ontology_workflow.py  test_rbac.py  test_rbac_cross_module.py  test_retry_integration.py  test_schema_notification_integration.py  test_setting_router_full.py
backend/tests/scenarios/: conftest.py  test_bs01_traffic_modeling.py  test_bs02_data_source_query.py  test_bs03_action_execution.py  test_bs04_copilot_conversation.py  test_bs05_version_rollback.py  test_bs06_multi_tenant.py  test_bs07_rbac_permissions.py  test_bs08_shell_context.py  test_bs09_cascade_inheritance.py  (+9 more)
(+409 files in other folders)
