[project]
name = "lingshu"
version = "0.1.0"
description = "LingShu - Ontology-centric Data Operating System"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "neo4j>=5.27.0",
    "redis>=5.2.0",
    "authlib>=1.4.0",
    "bcrypt>=4.2.0",
    "casbin>=1.38.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "aiomysql>=0.2.0",
    "google-genai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lingshu"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/lingshu"]
omit = ["*/tests/*", "*/alembic/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
